--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
+          
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
@@ -35,13 +35,9 @@
                 </div>
               </li>
             </ul>
-            
-            <form class="form-inline my-2 my-lg-0 d-flex">
-              <input class="form-control mr-sm-2 border-0" type="search" aria-label="Search">
+            <div class="form-inline my-2 my-lg-0 d-flex">
               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Tìm kiếm</a>
-                </li>
+                <%= render 'layouts/search', url: @url_search %>
                 <li class="nav-item">
                   <button class="btn btn-outline-light" href="#" style="background-color:#F9593F">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -55,7 +51,7 @@
                   <a class="nav-link active" href="#">Đăng kí </a>
                 </li>
               </ul>
-            </form>
+            </div>
           </div>
         </nav>
       </div>
