--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
@@ -37,7 +37,7 @@
             </ul>
             <div class="form-inline my-2 my-lg-0 d-flex">
               <ul class="navbar-nav">
-                <%= render 'layouts/search', url: @url_search %>
+                  <%= render 'layouts/search'%>
                 <li class="nav-item">
                   <button class="btn btn-outline-light" href="#" style="background-color:#F9593F">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
