--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'home/header' %>
 <div class="container">
   <div class="row mt-4">
    
@@ -11,7 +12,7 @@
         <div class="input-group mb-6" style="width: 25%">
           <div class="mr-2"><span>Số lượng</span></div>
           
-          <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" value="1" >
+          <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" value="1" min=1 >
           
         </div>
         <div class="mt-2 ">
@@ -28,3 +29,5 @@
     </div>
   </div>
 </div>
+<%= render 'home/footer' %>
+
