--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -32,7 +32,7 @@
                     <i class="fa fa-shopping-cart"></i>
 
                     <span class="badge text-white ms-1 rounded-pill">
-                    <%= render 'home/cartheader' %>
+                    <%= render 'home/cart_header' %>
                     </span>
                     <% end %>
                   </button>
