--- a/app/views/order_details/create.js.erb
+++ b/app/views/order_details/create.js.erb
@@ -1,5 +1,5 @@
 <% if @order_detail.errors.any? %>
 alert("not valid.")
 <% else %>
-  $(".cart-text").html("<%= escape_javascript(render 'home/cartheader') %>")
+  $(".cart-text").html("<%= escape_javascript(render 'home/cart_header') %>")
 <% end %>
