--- a/app/views/products/_allproduct.html.erb
+++ b/app/views/products/_allproduct.html.erb
@@ -80,14 +80,12 @@
               </div>
               <!-- Product actions-->
               <div class="card-footer p-2 pt-0 border-top-0 bg-transparent">
-                <%= form_for @order_detail do |f| %>
                 <div class="text-center">
-                  <%= f.hidden_field :quantity, value: 1 %>
-                  <%= f.hidden_field :product_id, value: product.id %>
-                  <%= f.hidden_field :price, value: product.price %>
-                  <%= f.submit "add to cart",class:"btn btn-primary" %>
+                 
+                  <%= button_to "Add to cart", order_details_path(:product_id => product.id),
+                  class:"btn btn-outline-dark mt-auto border-0 text-light", style:"background-color: orangered" %>
                 </div>
-                <% end %>
+               
               </div>
             </div>
           </div>
