--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'home/header'%>
 <div class="container">
-    <main>
+  <main>
 
     <div class="row g-5 ">
       <div class="col-md-5 col-lg-4 order-md-last">
@@ -8,18 +8,18 @@
           <span class="text-primary">Your cart</span>
           <span class="badge bg-primary rounded-pill"><%= @current_cart.order_details.size %></span>
         </h4>
-        
-            <ul class="list-group mb-3">
-            <% @cart.order_details.each do |order_detail| %>
+
+        <ul class="list-group mb-3">
+          <% @cart.order_details.each do |order_detail| %>
           <li class="list-group-item d-flex justify-content-between lh-sm">
             <div>
               <h6 class="my-0"><%= order_detail.product.name %></h6>
-              
+
             </div>
             <span class="text-muted"><%= order_detail.product.price %></span>
             <span class="text-muted"><%= order_detail.quantity %></span>
           </li>
-           <% end %>
+          <% end %>
           <%# <li class="list-group-item d-flex justify-content-between bg-light">
             <div class="text-success">
               <h6 class="my-0">Promo code</h6>
@@ -32,8 +32,8 @@
             <strong><%= @current_cart.sub_total %></strong>
           </li>
         </ul>
-       
-        
+
+
 
         <%# <form class="card p-2">
           <div class="input-group">
@@ -44,35 +44,35 @@
       </div>
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Billing address</h4>
-        <%= form_for @order do |f| %>
-          <div class="row g-3">
+        <%# <%= form_for @order do |f| %> 
+          <%# <div class="row g-3"> %>
             <%# <div class="col-sm-6">
-              <label for="firstName" class="form-label">First name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
-            </div> %>
+                <label for="firstName" class="form-label">First name</label>
+                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div> %>
 
             <%# <div class="col-sm-6">
-              <label for="lastName" class="form-label">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div> %>
+                <label for="lastName" class="form-label">Last name</label>
+                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div> %>
 
             <%# <div class="col-12">
-              <label for="username" class="form-label">Username</label>
-              <div class="input-group has-validation">
-                <span class="input-group-text">@</span>
-                <input type="text" class="form-control" id="username" placeholder="Username" required>
+                <label for="username" class="form-label">Username</label>
+                <div class="input-group has-validation">
+                  <span class="input-group-text">@</span>
+                  <input type="text" class="form-control" id="username" placeholder="Username" required>
 
-              <div class="invalid-feedback">
-                  Your username is required.
+                <div class="invalid-feedback">
+                    Your username is required.
+                  </div>
                 </div>
-              </div>
-            </div> %>
+              </div> %>
 
             <%# <div class="col-12">
               <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
@@ -82,92 +82,92 @@
               </div>
             </div> %>
 
-            <div class="col-12">
+            <%# <div class="col-12">
               <label for="address" class="form-label">Address</label>
               <%= f.text_field :address, required: true, autofocus: true,class:"form-control" %>
-              <div class="invalid-feedback">
+              <%# <div class="invalid-feedback">
                 Please enter your shipping address.
               </div>
-            </div>
+            </div>  %>
 
-          </div>
+          <%# </div> %>
 
-          <hr class="my-4">
+          <%# <hr class="my-4"> %>
 
           <%# <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="same-address">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-          </div>
-
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="save-info">
-            <label class="form-check-label" for="save-info">Save this information for next time</label>
-          </div> %>
-
-          <hr class="my-4">
-
-          <%# <h4 class="mb-3">Payment</h4>
-
-          <div class="my-3">
-            <div class="form-check">
-              <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-              <label class="form-check-label" for="credit">Credit card</label>
+              <input type="checkbox" class="form-check-input" id="same-address">
+              <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
             </div>
+            
             <div class="form-check">
-              <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-              <label class="form-check-label" for="debit">Debit card</label>
-            </div>
-            <div class="form-check">
-              <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-              <label class="form-check-label" for="paypal">PayPal</label>
-            </div>
-          </div> %>
+              <input type="checkbox" class="form-check-input" id="save-info">
+              <label class="form-check-label" for="save-info">Save this information for next time</label>
+            </div> %>
+
+          <%# <hr class="my-4"> %>
+
+          <%# <h4 class="mb-3">Payment</h4> %>
+
+          <%# <div class="my-3">
+              <div class="form-check">
+                <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
+                <label class="form-check-label" for="credit">Credit card</label>
+              </div>
+              <div class="form-check">
+                <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
+                <label class="form-check-label" for="debit">Debit card</label>
+              </div>
+              <div class="form-check">
+                <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
+                <label class="form-check-label" for="paypal">PayPal</label>
+              </div>
+            </div> %>
 
           <%# <div class="row gy-3">
-            <div class="col-md-6">
-              <label for="cc-name" class="form-label">Name on card</label>
-              <input type="text" class="form-control" id="cc-name" placeholder="" required>
-              <small class="text-muted">Full name as displayed on card</small>
-              <div class="invalid-feedback">
-                Name on card is required
-              </div>
-            </div>
 
-            <div class="col-md-6">
-              <label for="cc-number" class="form-label">Credit card number</label>
-              <input type="text" class="form-control" id="cc-number" placeholder="" required>
-              <div class="invalid-feedback">
-                Credit card number is required
-              </div>
-            </div>
 
-            <div class="col-md-3">
-              <label for="cc-expiration" class="form-label">Expiration</label>
-              <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-              <div class="invalid-feedback">
-                Expiration date required
-              </div>
-            </div>
-
-            <div class="col-md-3">
-              <label for="cc-cvv" class="form-label">CVV</label>
-              <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-              <div class="invalid-feedback">
-                Security code required
-              </div>
-            </div>
-          </div> %>
+          </div>
 
           <hr class="my-4">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
-          <%# <%= f.submit "Submit", check_out_create_path  %> %>
+          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button> %>
+
+        <%# <% end %> 
+
+        <%# <%= button_to "sada", check_out_create_path, params:{id: @cart.order_details.first.product[:id]}, remote: true %>
+        <%= form_for @order do |order| %>
+          <div id="payment-element">
+            <div id="card">
+              <!-- Elements will create input elements here -->
+            </div>
+            <!--Stripe.js injects the Payment Element-->
+          </div>
+
+
+          <!-- We'll put the error messages in this element -->
+          <div id="card-errors" role="alert"></div>
+
+          <%= order.submit "Submit Payment #{@cart.sub_total}" %>
         <% end %>
-
-          <%= button_to "sada", check_out_create_path, params:{id: @cart.order_details.first.product[:id]}, remote: true %>
-
       </div>
     </div>
   </main>
 </div>
 
 <%= render 'home/footer'%>
+<script>
+  const stripe = Stripe(
+    "pk_test_51L8JPcIekHnUbT8KJUIoE5Q34nJWFDXoSPSX02SjE9zqtpwK3j957WVucSpEMTacWBYUGGHkRdqxsuf9ZBq6qt0B00kToy2awu");
+  const appearance = {
+    theme: 'night'
+  };
+
+  var elements = stripe.elements();
+  var style = {
+    base: {
+      color: "#32325d",
+    }
+  };
+
+  var paymentElement = elements.create('card');
+  paymentElement.mount("#card");
+</script>
