--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -2,47 +2,43 @@
   <div class="container">
     <footer class="py-5">
       <div class="row">
-        <div class="col-6 col-md-2 mb-3">
-          <h5>Section</h5>
+        <div class="col col-md-2 mb-3">
+          <h5>CÔNG TY CP ĐẦU TƯ & THƯƠNG MẠI TNG</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">4600305723- Sửa đổi lần 31: Ngày 30/09/2020. Cơ quan cấp: Phòng ĐKKD Tỉnh Thái Nguyên</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Địa chỉ trụ sở: 434/1 Đường Bắc Kạn, TP Thái Nguyên</a></li>
+            
           </ul>
         </div>
 
         <div class="col-6 col-md-2 mb-3">
-          <h5>Section</h5>
+          <h5>THƯƠNG HIỆU</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Giới thiệu</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Liên hệ</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Điện thoại: 02083 755 755</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Hotline: 02083.658.129</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"> Email: sale@tngfashion.vn</a></li>
           </ul>
         </div>
 
         <div class="col-6 col-md-2 mb-3">
-          <h5>Section</h5>
+          <h5>CHÍNH SÁCH HỖ TRỢ</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Chính sách đổi hàng & Vận chuyểns</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Chính sách khách hàng thân thiết</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Hướng dẫn thanh toán</a></li>
           </ul>
         </div>
-
         <div class="col-md-5 offset-md-1 mb-3">
           <form>
-            <h5>Subscribe to our newsletter</h5>
-            <p>Monthly digest of what's new and exciting from us.</p>
+            <h5>Đăng kí để xem những sản phẩm mới</h5>
+            <p>Bạn sẽ nhận được thông báo mỗi khi shop có hàng mới</p>
             <div class="input-group mb-3  d-flex flex-column flex-sm-row w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden mr-sm-2">Email address</label>
+              <label for="newsletter1" class="visually-hidden mr-sm-2">Email</label>
               <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-              <button class="btn btn-primary" type="button">Subscribe</button>
+              <button class="btn btn-primary" type="button">Đăng kí</button>
             </div>
           </form>
         </div>
