--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -3,25 +3,25 @@
     <div class="row">
       <div class="col">
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="#">
+           <%= link_to  root_path, class: 'nav-link' do %>
             <%= image_tag("logo.png", size: "50x50", alt: "Edit Entry") %>
-          </a>
+          <% end %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <%= link_to 'Home', root_path, class: 'nav-link' %>
-              </li>
+             
               <li class="nav-item active">
                 <%= link_to 'Sản phẩm', products_path, class: 'nav-link' %>
               </li>
               <li class="nav-item active">
-                <%= link_to 'Contact', contact_path, class: 'nav-link' %>
+                <%= link_to 'Liên hệ', contact_path, class: 'nav-link' %>
               </li>
-
+               <li class="nav-item active">
+               <a class="nav-link" href="#">Giới thiệu</a>
+              </li>
             </ul>
             <div class="form-inline my-2 my-lg-0 d-flex">
               <ul class="navbar-nav">
