--- a/app/views/products/_allproduct.html.erb
+++ b/app/views/products/_allproduct.html.erb
@@ -67,7 +67,7 @@
                 <span>Sale</span>
               </div>
               <!-- Product image-->
-              <%=  image_tag(product.image)  %>
+              <%= image_tag(product.image.url, alt: 'Image') if product.image? %>
               <!-- Product details-->
               <div class="card-body p-2">
                 <div class="text-center">
@@ -79,11 +79,13 @@
                 </div>
               </div>
               <!-- Product actions-->
+
               <div class="card-footer p-2 pt-0 border-top-0 bg-transparent">
                 <div class="text-center">
                  
-                  <%= button_to "Add to cart", order_details_path(:product_id => product.id),
+                  <%= button_to "Thêm vào giỏ", order_details_path(product_id: product.id),
                   class:"btn btn-outline-dark mt-auto border-0 text-light", style:"background-color: orangered" %>
+
                 </div>
                
               </div>
